@@ -1564,6 +1564,19 @@ Mining, but yields three times the amount of stone or metals. Mining is best don
 You can also bundle multiple resources together using this skill.  The GET command \
 can be used to unbundle such resources.
 
+MMYCOLOGY=MASTER_MYCOLOGY
+MASTERMYCOLOGY=MASTER_MYCOLOGY
+MASTER_MYCOLOGY=<ABILITY>\
+Usage    : MMYCOLOGY [ITEM NAME]\n\r\
+Example  : mherb some mushrooms\n\r\
+Master Mycology is identical to Mycology, except that \
+it is able to identify every mushroom in a bundle, or in a large \
+group of mushrooms in the mycologist`s inventory.  Like Mycology, \
+the player may use this skill to identify mushrooms for the types that \
+they are.  This skill is quite necessary for Cooks and Assassins who \
+need particular mushrooms for recipes, but is fairly unnecessary for others. \
+The raw mushrooms for mycology are obtained by using the Foraging skill.
+
 MSHEARING=MASTER_SHEARING
 MASTERSHEARING=MASTER_SHEARING
 MASTER_SHEARING=<ABILITY>\
@@ -1696,6 +1709,16 @@ This skill allows the player to remove any behaviors, such as aggressiveness \
 or the tendency to roam around, or other behaviors from the target caged or \
 bound mount.  The mounts that can be tamed are extended by racial and favored \
 mount skills.
+
+MYCOLOGY=<ABILITY>\
+Usage    : MYCOLOGY [ITEM NAME]\n\r\
+Example  : mycology some mushrooms\n\r\
+Without this skill, all mushrooms found through foraging are unknown to \
+the player, being known only as "mushrooms".  With this skill, the player \
+may identify an mushroom for the type that it is.  This skill is quite \
+necessary forCooks and Assassoms who need particular mushrooms for \
+recipes, but is fairly unnecessary for others. \
+The raw mushrooms for mycology are obtained by using the Foraging skill.
 
 ORGANIZE=ORGANIZING
 ORGANIZING=<ABILITY>\
