@@ -72,6 +72,7 @@
  71. Layer info added to VIEW and slightly more apparently in LONGLOOK.
  72. Conquest now requires dead mob lvl diff <= EXPRATEx2 (from ini file) HELP CONQUERABLE
  73. GenTraps now support custom reset ticks for builder-set traps.
+ 74. New common skills: Mycology, and Master Mycology. (Herbology now also Recipe Driven/Editable)
  
 # Build 5.10.2 Release 4/28/2023
   *  DATABASE CHANGED! (Enlarged CMDATE, and new expiration date added to CMJRNL table)
